fixed submenu-toggle spacing

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -151,7 +151,6 @@ li.default-menu {
 		color: #444444;
 		display: block;
 		float: left;
-		padding: 16px 0 0;
 		height: 30px;
 
 		&:hover {
@@ -190,7 +189,7 @@ li.default-menu {
 				-webkit-transform: translateY(-50%);
 				transform: translateY(-50%);
 				margin-left: 5px;
-				margin-top: 4px;
+				margin-top: -4px;
 			}
 
 			> ul .sub-toggle {
@@ -235,7 +234,7 @@ li.default-menu {
 				position: absolute;
 				background: none repeat scroll 0 0 rgba(255, 255, 255, 0.8);
 				border-top: 1px solid #0FBE7C;
-				top: 45px;
+				top: 30px;
 				left: 25px;
 				width: 150px;
 
@@ -547,7 +546,7 @@ li.default-menu {
 			li {
 
 				.sub-toggle {
-					margin-top: -3px;
+					margin-top: 1px;
 					margin-left: 0;
 					right: 7px;
 					color: #444444;
@@ -566,13 +565,14 @@ li.default-menu {
 					transform: translateY(20px);
 					background-color: #01101B;
 					border: 1px solid #01101B;
+					top: 60px;
 					
 					li  {
 
 						border-bottom-color: #666666;
 
 						ul {
-							left: 200px;
+							left: 198px;
 							top: -1px;
 						}
 						
@@ -607,6 +607,7 @@ li.default-menu {
 		a {
 			color:#a1b1bc;
 			padding: 20px;
+			height: auto;
 		}
 	}
 	.main-small-navigation {
