--- a/assets/scss/_theme-style.scss
+++ b/assets/scss/_theme-style.scss
@@ -40,6 +40,11 @@ html {
 	/* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
 }
 
+* {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 article, aside, details, figcaption, figure, footer, header, main, nav, section {
 	display: block;
 }
